fix: estilo links dark mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -26,7 +26,7 @@ html.dark {
   color: #fff;
 }
 
-.dark .nav-links a {
+.dark a {
   color: #fff;
 }
 
